syntax = "proto3";

package auth;

option go_package = "../pb;pb";

// Request message untuk register
message RegisterRequest{
    string name = 1;
    string email = 2;
    string password = 3;
}

// Response message register dan login
message AuthResponse{
    string id = 1;
    string name = 2;
    string email = 3;
    string token = 4;
}

// Request message login
message LoginRequest{
    string email = 1;
    string password = 2;
}

service AuthService{
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);
}

/* install package google golang org
- google.golang.org/grpc
- google.golang.org/protobuf
- github.com/grpc-ecosystem/go-grpc-middleware
- github.com/grpc-ecosystem/go-grpc-middleware/auth
*/